# SlicerNeuroBrainSeg

./: .gitignore  CMakeLists.txt  INSTALLATION.md  QUICK-FIX.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  requirements.txt
NeuroBrainSeg/: CMakeLists.txt  NeuroBrainSeg.py  __init__.py
NeuroBrainSeg/Testing_old/: CMakeLists.txt
NeuroBrainSeg/Testing_old/Python/: NeuroBrainSeg.py
NeuroBrainSeg/models/: README.md
